--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,8 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:1.2.+'
-		classpath 'com.novoda:bintray-release:0.2.+'
-
-		// NOTE: Do not place your application dependencies here; they belong
-		// in the individual module build.gradle files
+		classpath 'com.android.tools.build:gradle:2.1.2'
+		classpath 'com.novoda:bintray-release:0.3.4'
 	}
 }
 
